--- a/Utility/database.ini
+++ b/Utility/database.ini
@@ -1,7 +1,7 @@
 [postgresql]
 host=localhost
-database=HW2-DBS-Winter-2024
-user=postgres
-password=12345
+database=cs236363
+user=BarTzi
+password=Tbhnvbsx6^
 port=5432
 
